@@ -1,5 +1,10 @@
 This is the Changelog for amavisd-milter.
 
+20050605:
+	amavisd-milter-1.0.2-RELEASE
+
+	Bugix release. Fix memory leak in mlfi_cleanup.
+
 20050529:
 	amavisd-milter-1.0.1-RELEASE
 
